{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 226,
  "lineage": "1790d42a-1ffb-943a-5155-8d60e2113e90",
  "resources": [
    {
      "module": "module.aks_cluster",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aks_load_balancer_subnet_nsg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.aks_cluster",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aks_node_pool_subnet_nsg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.aks_cluster",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_node_pool_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c8dfa2ca-65d9-45c5-830a-f3c93b1e5d5f/resourceGroups/rg-aks-deployment-dev-eastus-001/providers/Microsoft.Network/virtualNetworks/vnet-aks-deployment-dev-eastus-vn/subnets/snet-aks-node-pool-dev-eastus-sn",
            "name": "snet-aks-node-pool-dev-eastus-sn",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-aks-deployment-dev-eastus-001",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.EventHub",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-aks-deployment-dev-eastus-vn"
          },
          "dependencies": [
            "module.resource-group.azurerm_resource_group.resource_group",
            "module.virtual-network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.aks_cluster",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal_load_balancer_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c8dfa2ca-65d9-45c5-830a-f3c93b1e5d5f/resourceGroups/rg-aks-deployment-dev-eastus-001/providers/Microsoft.Network/virtualNetworks/vnet-aks-deployment-dev-eastus-vn/subnets/snet-aks-load-balancer-dev-eastus-sn",
            "name": "snet-aks-load-balancer-dev-eastus-sn",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-aks-deployment-dev-eastus-001",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.EventHub",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-aks-deployment-dev-eastus-vn"
          },
          "dependencies": [
            "module.resource-group.azurerm_resource_group.resource_group",
            "module.virtual-network.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.virtual-network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "637823a2-3558-4191-b56b-e99851584e27",
            "id": "/subscriptions/c8dfa2ca-65d9-45c5-830a-f3c93b1e5d5f/resourceGroups/rg-aks-deployment-dev-eastus-001/providers/Microsoft.Network/virtualNetworks/vnet-aks-deployment-dev-eastus-vn",
            "location": "eastus",
            "name": "vnet-aks-deployment-dev-eastus-vn",
            "resource_group_name": "rg-aks-deployment-dev-eastus-001",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/c8dfa2ca-65d9-45c5-830a-f3c93b1e5d5f/resourceGroups/rg-aks-deployment-dev-eastus-001/providers/Microsoft.Network/virtualNetworks/vnet-aks-deployment-dev-eastus-vn/subnets/snet-aks-load-balancer-dev-eastus-sn",
                "name": "snet-aks-load-balancer-dev-eastus-sn"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/c8dfa2ca-65d9-45c5-830a-f3c93b1e5d5f/resourceGroups/rg-aks-deployment-dev-eastus-001/providers/Microsoft.Network/virtualNetworks/vnet-aks-deployment-dev-eastus-vn/subnets/snet-aks-node-pool-dev-eastus-sn",
                "name": "snet-aks-node-pool-dev-eastus-sn"
              }
            ],
            "tags": {
              "environment": "dev",
              "group": "none",
              "project": "apim-deployment",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.resource-group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}